# htmz-todo

./: main.py  pyproject.toml
templates/: index.html  tasks.html
